--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ development:
   pool: 5
   timeout: 5000
   username: root
-  password: root
+  password: vi156vi
 
 test:
   adapter: mysql2
@@ -17,7 +17,7 @@ test:
   pool: 5
   timeout: 5000
   username: root
-  password: root
+  password: vi156vi
 
 production:
   adapter: mysql2
@@ -25,4 +25,4 @@ production:
   pool: 5
   timeout: 5000
   username: root
-  password: root
+  password: vi156vi
